<resources>
    <string name="app_name">Tip Calculator</string>
    <string name="total_bill">Bill Total</string>
    <string name="enter_bill_value">Enter Bill Value</string>
    <string name="tip_perc">Tip %</string>
    <string name="tip_10">10%</string>
    <string name="tip_15">15%</string>
    <string name="tip_18">18%</string>
    <string name="tip_custom">Custom</string>
    <string name="tip">Tip</string>
    <string name="total">Total</string>
    <string name="zero_value">0.00</string>
    <string name="exit">Exit</string>
</resources>
