<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="15dp"
    android:orientation="vertical"
    tools:context="mad.nil.tipcalculator.TipCalculator">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp">

        <TextView
            android:layout_width="0dip"
            android:layout_weight="3"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/total_bill"
            android:textAlignment="center"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/bill_input_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/enter_bill_value"
            android:inputType="numberDecimal" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp">

        <TextView
            android:layout_width="0dip"
            android:layout_weight="3"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/tip_perc"
            android:textAlignment="center"
            android:textSize="18sp" />

        <RadioGroup
            android:id="@+id/tip_selected_perc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/tip_10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/tip_10" />

            <RadioButton
                android:id="@+id/tip_15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tip_15" />

            <RadioButton
                android:id="@+id/tip_18"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tip_18" />

            <RadioButton
                android:id="@+id/tip_custom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tip_custom" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp">

        <TextView
            android:id="@+id/custom_label"
            android:layout_width="0dip"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/tip_custom"
            android:textAlignment="center"
            android:enabled="false"
            android:textSize="18sp" />

        <SeekBar
            android:id="@+id/tip_custom_seek_value"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="8"
            android:progress="25"
            android:max="50"/>

        <TextView
            android:id="@+id/seek_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="25%"
            android:enabled="false"
            android:textAlignment="center"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">
        <LinearLayout
            android:layout_width="0dip"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/tip"
                android:textAlignment="center"
                android:textSize="18sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/total"
                android:textAlignment="center"
                android:textSize="18sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dip"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp">

            <TextView
                android:id="@+id/tip_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/zero_value"
                android:textAlignment="center"
                android:textSize="18sp" />
            <TextView
                android:id="@+id/total_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/zero_value"
                android:textAlignment="center"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/exit_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/exit" />

</LinearLayout>
